# aleph2_common

./: .clang-format  .gitlab-ci.yml  CMakeLists.txt  README.md  flake.nix  package.xml
aleph2_description/: CMakeLists.txt  README.md  default.nix  package.xml
aleph2_description/config/: aleph2_controllers.yaml  controllers.yaml
aleph2_description/launch/: description.launch  state_publisher.launch  state_publisher.launch.py  state_publisher.launch.xml
aleph2_description/meshes/: base.STL  manip_base.STL  manip_gripper.STL  manip_jaw.STL  wheel.STL
aleph2_description/models/: manip_wrist.STL
aleph2_description/ros2_control/: aleph2.ros2_control.xacro  aleph2_sim.ros2_control.xacro
aleph2_description/urdf/: aleph2.urdf  aleph2.urdf.xacro  aleph2_sim.urdf.xacro  manip.urdf.xacro  zed.urdf.xacro
aleph2_description/urdf/include/: aleph2.gazebo.xacro  base.xacro  drivetrain.urdf.xacro  drivetrain.xacro  gazebo.xacro  manip.urdf.xacro  manip.xacro  materials.urdf.xacro  zed.urdf.xacro  zed.xacro
aleph2_manip/: CMakeLists.txt  README.md  package.xml
aleph2_manip/cfg/: Kinematics.cfg
aleph2_manip/include/aleph2_manip_kinematics/: aleph2_manip_kinematics.h
aleph2_manip/launch/: publish_fake_state.launch  upload_description.launch
aleph2_manip/nodes/: manip_kinematics_control_node.cpp
aleph2_manip/scripts/: joy_control  switch
aleph2_manip/src/: aleph2_manip_kinematics.cpp
aleph2_msgs/: CMakeLists.txt  package.xml
aleph2_msgs/msg/: PowerStatus.msg
aleph2_teleop/: CMakeLists.txt  default.nix  package.xml
aleph2_teleop/config/: joy_config.yaml  joy_mapping.yaml
aleph2_teleop/launch/: joy_teleop.launch  joy_teleop.launch.py  joy_teleop.launch.xml
aleph2_teleop/scripts/: key_teleop
include/aleph2_manip_kinematics/: aleph2_manip_kinematics.h
input_manager/: CMakeLists.txt  default.nix  package.xml
input_manager/data/: joystick_mapping.yaml
input_manager/launch/: input_manager.launch
input_manager/msg/: DeviceInfo.msg  DeviceList.msg  Input.msg
input_manager/src/: joystick.cpp  joystick.h  joystick.hpp  main.cpp  rostalker.cpp  rostalker.h  rostalker.hpp
input_msgs/: CMakeLists.txt  package.xml
input_msgs/msg/: DevicesListMessage.msg
launch/: display.launch  joint_pub.launch  publish_fake_state.launch  rviz.launch  simulation.launch  state_pub.launch  upload_description.launch  visualization.launch
meshes/: B.STL  chromosom.STL  chromosom_collision.STL  manip_elbow.STL
msg/: KinematicsCommand.msg
nodes/: manip_kinematics_control_node.cpp  test_ik.cpp  test_ik1.cpp
power_msgs/: CMakeLists.txt  package.xml
rviz/: aleph.rviz  aleph2.rviz
scripts/: joy_control  switch  test_ik.py
src/: aleph2_manip_kinematics.cpp  test_ik.cpp
urdf/: aleph2.gazebo  aleph2.gazebo.xacro  aleph2.gv  aleph2.urdf  aleph2.urdf.xacro  manip.urdf.xacro  materials.xacro
