<?xml version="1.0"?>
<package format="2">
  <name>aleph2_description</name>
  <version>1.0.0</version>
  <description>
    The URDF model of the Aleph2 robot
  </description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
