<?xml version="1.0"?>
<package format="2">
  <name>aleph2_teleop</name>
  <version>1.0.0</version>
  <description>
    Teleop package for Aleph2
  </description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

</package>
