<?xml version="1.0"?>
<package format="3">
  <name>input_manager</name>
  <version>0.0.0</version>
  <description>
    The input_manager package
  </description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <depend>rclcpp</depend>
  <depend>sdl2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
