<?xml version="1.0"?>
<package format="2">
  <name>input_manager</name>
  <version>1.0.0</version>
  <description>The input_manager package</description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <depend>sdl2</depend>
  <depend>udev</depend>
</package>
