<?xml version="1.0"?>
<package format="3">
  <name>input_manager</name>
  <version>0.0.0</version>
  <description>
    The input_manager package
  </description>

  <maintainer email="continuum@cs.uni.wroc.pl">Continuum Rover Team</maintainer>
  <author>Błażej Sowa</author>

  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>ament_index_cpp</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>sdl2</build_depend>
  <build_depend>yaml-cpp</build_depend>
  <build_depend>udev</build_depend>

  <exec_depend>ament_index_cpp</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sdl2</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>
  <exec_depend>udev</exec_depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>ament_cmake_uncrustify</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
