<package format="2">
  <name>input_msgs</name>
  <version>1.0.0</version>
  <description>The input_msgs package</description>

  <maintainer email="cezare22@gmail.com">Siza</maintainer>
  <license>WTFPL</license>

  <author>Siza</author>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <architecture_independent/>
  </export>
</package>
