<?xml version="1.0"?>
<package format="2">
  <name>power_msgs</name>
  <version>0.0.0</version>
  <description>The power_msgs package</description>

  <maintainer email="olo@todo.todo">olo</maintainer>

  <license>TODO</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <export>
    <architecture_independent/>
  </export>
</package>
